# rq-dashboard-fast

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE.md  README.md  app.py  dashboard.py  docker-compose.yml  dump.rdb  example.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  uno.config.ts
.github/workflows/: docker-publish.yml  docker-pypi-publish.yml  python-publish.yml
ci/: docker-publish.yml  python-publish.yml
docs/: authentication.md
routers/: jobs.py  queues.py  web.py  workers.py
rq_dashboard_fast/: __init__.py  cli.py  rq_dashboard_fast.py
rq_dashboard_fast/static/css/: custom.css  main.css  uno.css
rq_dashboard_fast/static/js/: dashboard.js
rq_dashboard_fast/templates/: base.html  export.html  footer.html  header.html  job.html  jobs.html  login.html  queues.html  workers.html
rq_dashboard_fast/tests/: test_auth.py  test_dashboard.py  test_jobs_utils.py  test_queues_utils.py  test_scheduler.py  test_worker_utils.py
rq_dashboard_fast/utils/: auth.py  jobs.py  queues.py  workers.py
src/: app.py
src/routers/: queues.py  workers.py
src/templates/: base.html  jobs.html  queues.html  workers.html
static/css/: main.css
templates/: base.html  footer.html  header.html  job.html  jobs.html  queues.html  workers.html
utils/: job_registries.py  jobs.py  queues.py  redis_conn.py  workers.py
