[tool.poetry]
name = "rq-dashboard-fast"
version = "0.1.0"
description = ""
authors = ["Hannes221 <hannespfau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
redis = "^5.0.1"
rq = "^1.15.1"
uvicorn = "^0.25.0"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
