[tool.poetry]
name = "rq-dashboard-fast"
version = "0.2.4"
description = "rq-dashboard-fast is a FastAPI-based dashboard to monitor your Redis-Queue (RQ) Jobs, Queues, and Workers"
authors = ["Hannes221 <hannespfau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
redis = "^5.0.1"
rq = "^1.15.1"
uvicorn = "^0.25.0"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["rq_dashboard_fast"]

[tool.setuptools.package-data]
"*" = ["*.*"]