[tool.poetry]
name = "rq-dashboard-fast"
version = "0.5.2"
description = "rq-dashboard-fast is a FastAPI-based dashboard to monitor your Redis-Queue (RQ) Jobs, Queues, and Workers"
authors = ["Hannes221 <hannespfau@gmail.com>"]
readme = "README.md"
exclude = [
    "rq_dashboard_fast/tests",
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.109"
redis = ">=5.0.1"
rq = ">=1.15.1"
jinja2 = ">=3.1.3"
rq-scheduler = ">=0.13.1"
pandas = ">=2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"
pre-commit = "^3.6.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["rq_dashboard_fast"]

[tool.setuptools.package-data]
"*" = ["*.*"]